--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Twitter Clone</title>
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.css">
+    <title>Joy Background - Cartoon images for kids</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
